--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,9 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pyspark = "*"
+pyspark = "==3.2.1"
+findspark = "==2.0.1"
+py4j = "==0.10.9.3"
 
 [dev-packages]
 
